@@ -1,1 +1,10 @@
 # FastChat
+
+This application uses client server to connect and chat to the server using Java FX.
+Important -> Add the path To Java FX in your project, 
+(--module-path ${PATH_TO_FX} --add-modules javafx.fxml,javafx.controls,javafx.graphics,javafx.media)
+
+To run the project First start the server
+Then start the main launcher with your IP address in the listener.java file.
+
+Inspired from "DomHeal / JavaFX-Chat"
